# AI-Recruiter

./: .env.example  .gitignore  LICENSE  README.md  app.py  create_resume_table.sql  crewai_results.json  crewai_resume_processor.py  justfile  main.py  pyproject.toml  real_resume_parser.py  recruiter.db  ui_wireframe.txt
agents/: candidate_matcher.py  candidate_sourcer.py  compatibility_agent.py  email_draft_agent.py  progress_agent.py  resume_ingress.py  schedule_agent.py  scheduler_agent.py
chroma_db/: chroma.sqlite3
config/: database.py  settings.py
crews/: monitoring_crew.py  recruitment_crew.py
database/: models.py  operations.py
parsed_resumes/: 082403cf-a922-4101-8e65-f21183e6b936.json  11d49b97-2c45-4163-9011-9e74e0c33e79.json  1b07e513-c80e-4c06-8c4c-abdcf22be48c.json  2a51610f-abce-40bf-b78d-efd1f1c504f8.json  4f140470-c267-4564-8be8-984649a546a1.json  4fe04b85-5d7e-4b77-8a2d-49ce9867409b.json  50a17440-0e9c-4f5b-9784-7566ae36fb95.json  58143229-035f-4cfd-bf69-99ebbb45d7f3.json  645eacdd-0426-41c0-b01a-160b3ca8239f.json  7ab40efc-3250-4060-af17-db5db0f2769f.json  81644069-eac1-4326-a8af-f8982789e625.json  9300376a-810e-4472-8786-7e1ce65d53bf.json  9b52fe6f-b6a0-47af-9ffa-0781812b0bff.json  a9234ffe-6d9e-4e66-af4c-37b2dd002aa1.json  a93e5407-4317-4211-9aca-c1edf377478a.json  b107197b-af8a-4bf6-95ec-495427d87beb.json  c62c012b-41c9-4e6f-a780-7a070bb7b1f8.json  cb7a5768-6da7-43cb-afe1-2d2b97dcfd0c.json  d612a524-02f0-491d-a7da-72832ef4be65.json  eaebc50e-a3f1-4a73-918e-5ed4d21ed0cc.json  f4cf8dde-6bde-439b-af04-5f00e40f9883.json
src/: models.py
src/ai_recruiter/: __init__.py  models.py
static/css/: style.css
static/js/: app.js
templates/: base.html  search.html  upload.html
tools/: candidate_search_tool.py  compatibility_tool.py  resume_parser_tool.py
