[project]
name = "ai-recruiter"
version = "0.1.0"
description = "A POC for an HR agent"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "crewai>=0.28.8",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pypdf2>=3.0.1",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.2",
    "supabase>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-recruiter"
Repository = "https://github.com/yourusername/ai-recruiter"
Issues = "https://github.com/yourusername/ai-recruiter/issues"
